# QtIde

./: .gitignore  CMakeLists.txt  README.md  codeeditor.cpp  mainwindow.cpp  mainwindow.h  syntaxhighlighter.cpp  syntaxhighlighter.h
src/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  mainwindow.h  mainwindow.ui  syntaxhighlighter.cpp  syntaxhighlighter.h
src/keywords/: cxx_keywords.txt
