cmake_minimum_required(VERSION 3.5)

project(QtIde VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(QT NAMES Qt6 Qt5
    COMPONENTS Widgets Core REQUIRED)
find_package(Qt${QT_VERSION_MAJOR}
    COMPONENTS Widgets Core REQUIRED)

message(status "\nQt version is:${QT_VERSION_MAJOR}.${QT_VERSION_MINOR}")

add_subdirectory(src)

